--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,8 +4,10 @@
         <div class="col-lg-12" id="wrap-main-h1">
   
           <h1 class="main-h1"> <br><strong id="index-title">Find a retinal disease treatment.</strong></h1>
-          <h1 style="text-align: center" id="sub-main-h1"> CESARCELLS allows you to contact clinical trials you are likely to qualify for based on our assessment. </h1>
-          {{!-- <a href="/users/sign-in" type="submit" class="btn btn-primary" id="main-btn"> <span class="glyphicon glyphicon-arrow-right icon-arrow"> </span>       Register Now</a> --}}
+          <h1 style="text-align: center" id="sub-main-h1"> CESARCELLS makes it easy for you to qualify for clinical trials based on a 2 minute assessment. </h1>
+         {{!--  <a href="/users/sign-in" type="submit" class="btn btn-primary" id="main-btn"> <span class="glyphicon glyphicon-arrow-right icon-arrow"> </span> Try It Free</a> --}}
+         <br>
+         <br>
               <a id="scroll-to-1"><span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span></a>
           
              
@@ -38,16 +40,17 @@
              <h2 class="what-is-h2">What is Cesarcells.com?</h2>
 
              <p class="lead index-page">
-             Cesarcells.com helps you find cutting edge clinical trials. 
+             Cesarcells.com helps you find and qualify for retinal disease clinical trials. 
 
-             It is an independent resource on <strong id="index-title">Age Related Macular Degeneration (ARMD)</strong> and other retinal diseases. 
+             It is also an independent resource on <strong id="index-title">Age Related Macular Degeneration (ARMD)</strong> and other retinal diseases. 
 
             We have a team of health professionals analyzing the full body of research and clinical trial criteria for you, so you don't have to waste time reading through endless medical documentation. 
              </p> <br>
-
-             <p class="what-is-sci"><strong>We currently have over 8 ARMD clinical trials and references to scientific research.</strong></p>
-             
              <a class="btn btn-primary btn-lg" href="/about_us/aboutus" role="button" id="learn-more">Learn More About Us</a>
+             <p class="what-is-sci"><strong>We currently have over 8 ARMD clinical trials.</strong></p>
+             <img src="/assets/images/clintrial.png" width="30%" style="-webkit-filter: grayscale(100%); filter: grayscale(100%); padding: 10px; margin-bottom: 40px" id="clin-trial-img"></p>
+             
+            
              
            </div>
          </div>
@@ -103,7 +106,7 @@
                             <p class="lead index-p">
                             
 
-                            With a free CesarCells account, you can search for Stem Cell, Drug, Bio-Tech, and Genetic <strong id="index-title">clinical trials</strong> that you are interested in.
+                            With a free CesarCells account, you can connect with Stem Cell, Drug, Bio-Tech, and Genetic <strong id="index-title">clinical trials</strong> that you are interested in. Trials are gathered independently from various resources, including ClinicalTrials.gov.
 
                             </p> 
                         
