--- a/views/layouts/dash.handlebars
+++ b/views/layouts/dash.handlebars
@@ -14,6 +14,8 @@
     <script src="https://use.fontawesome.com/67714d146e.js"></script>
     <link href="/css/scrolling-nav.css" rel="stylesheet">
     <link href="/css/style.css" rel="stylesheet">
+    <LINK rel="SHORTCUT ICON"
+           href="/assets/images/logo.ico">
     <link rel="stylesheet" href="/css/magnific-popup/magnific-popup.css">
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
