--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -19,7 +19,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">            
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" id="a-dash-one" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-cogs" aria-hidden="true"></i>
+              <a href="#" class="dropdown-toggle" id="a-dash-one" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-medkit" aria-hidden="true"></i>
         My Health <span class="caret"></span></a>
               <ul class="dropdown-menu" aria-labelledby="dLabel">
                 <li><a href="/users/stargardt-disease-registry">Stargardt Disease Registry</a></li>
@@ -34,7 +34,7 @@
             </li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" id="a-dash-one" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-cogs" aria-hidden="true"></i>
-Tools <span class="caret"></span></a>
+My Tools <span class="caret"></span></a>
               <ul class="dropdown-menu" aria-labelledby="dLabel">
               {{#if user.geneticTestTaken}}
                 <li><a href=""></a></li>
@@ -47,13 +47,16 @@ Tools <span class="caret"></span></a>
                 <li><a href="/tools/start-health-assessment">Take Clinical Trial Assessment</a></li>
               </ul>
             </li>
-            <li class="dropdown">
+            {{!-- <li class="dropdown">
               <a href="#" class="dropdown-toggle" id="a-dash-three"  data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-eye" aria-hidden="true"></i>
 Trials <span class="caret"></span></a>
                 <ul class="dropdown-menu" aria-labelledby="dLabel">
                     <li><a href="/tools/all-trials">Browse Trials</a></li>
                 </ul>
-            </li>
+                <ul class="dropdown-menu" aria-labelledby="dLabel">
+                    <li><a href="/tools/all-trials">Browse Trials</a></li>
+                </ul>
+            </li> --}}
             <li class="dropdown">
             <a href="/users/dashboard" class="" id="a-dash-four" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <i class="fa fa-user" aria-hidden="true"></i>
 My Account <span class="caret"></span></a>
