--- a/views/trials/trial_five.handlebars
+++ b/views/trials/trial_five.handlebars
@@ -1,4 +1,14 @@
-
+<div class="container">
+<div class="row">
+    <div class="col-lg-12 instructions-parents">
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <p class="lead">Instructions for parents or guardians looking for study information for a patient under 18 years of age.
+If you are a parent or guardian looking for study information for children under the age of 18 years old, please complete this form with your Personal and Contact information. You will be contacted by the institution/clinic you selected.</p>
+          </div>
+        </div>
+      </div>
+</div>
 <div class="row">
     <div class="col-lg-12 wrap-trial-form">
         
@@ -30,12 +40,14 @@
                   </div>
                 </div>
 
+                <label><input type="checkbox" name="agreecontact" checked="checked" required="true" /> Please check to confirm that you are over the age of 18.</label><br>
+
+                <label><input type="checkbox" name="agreecontact" checked="checked" required="true" /> I Agree To Be Contacted By This Clinic</label><br />
                 <label>
-                    <input type="checkbox" name="agreecontact" checked="checked" required="true" /> I Agree To Be Contacted By This Clinic</label><br />
-                <label><input type="checkbox" name="agreequalified" checked="checked" required="true" /> I Have Qualified For This Trial</label><br />
+                <input type="checkbox" name="agreequalified" checked="checked" required="true" /> I Have Qualified For This Trial</label><br />
                 <input type="submit" value="Submit" id="contact-trial-btn" />
             </form>             
         
     </div>
 </div>
-
+</div>
