--- a/views/users/assessment_results.handlebars
+++ b/views/users/assessment_results.handlebars
@@ -1,9 +1,13 @@
 <div class="container">
-
-
-<div class="row">
-<h1 id="results-h1"> Your Assessment Results </h1>
-<p class="lead">View your results in the table below. Click on 'Ask About This Trial' only if your points are equal to the qualifying points and you are ready to contact the clinic. Responses are typically received within 2-3 business days.</p> 
+  <div class="row">
+    <div class="panel-group">
+      <div class="panel panel-default">
+        <div class="panel-body"><h1 id="results-h1"> Your Assessment Results </h1></div>
+      </div>
+      <div class="panel panel-default">
+        <div class="panel-body"><p class="lead">View your results in the table below. Click on 'Ask About This Trial' only if your points are equal to the qualifying points and you are ready to contact the clinic.</p></div>
+      </div>
+    </div> 
     <div class="col-md-6" >
       <table id="gene-table" class="table table-striped gene">
         <thead>
@@ -74,14 +78,32 @@
         </tbody>
       </table>
       
-      <img src="/assets/images/clintrial.png" width="100%" style="-webkit-filter: grayscale(100%); filter: grayscale(100%); padding: 50px;"></p>
+    
+      <p class="lead">Have questions? <a href="/accounts/support"><strong id="index-title">Contact Support</strong></a></p>
     </div><br>
     <div class="col-md-6">
     <h2 style="margin-top: 65px; margin-left: 125px"> DID YOU QUALIFY? </h2>
       <p class="lead" style="line-height: 2.4; font-size: 24px; margin-left: 180px; width: 150">If the total points in the Your Points field, match the total points in the Qualifying Points field, then you've qualified for that trial. It's that simple! </p>
+
       <div class="col-sm-12">
       <a href="/users/dashboard" type="submit" class="btn btn-primary" id="back-to-dash-btn"> Back To Dashboard</a><br>
+
       </div>
     </div>
-</div>
-</div>
+  </div> {{! Row ends}}
+  <div class="row">
+    <div class="col-lg-12">
+          <div class="panel-group">
+            <div class="panel panel-default">
+              <div class="panel-body">
+              <p class="lead">Note: By registering at this site, you agree to be contacted by the study site that you 
+    selected. By clicking submit, the information you provided will be governed by our 
+    privacy policy. For important information about how your personal information will be 
+    used by CESARCELLS, view our terms and conditions, which includes our privacy policy.</p>
+            </div>
+            </div>
+            
+          <img src="/assets/images/clintrial.png" width="50%" style="-webkit-filter: grayscale(100%); filter: grayscale(100%); padding: 50px;">
+    </div>
+  </div> {{!Row ends}}
+</div> {{! Container ends}}
